# projeto_etl_spark

./: .env  .gitignore  README.md  comandos.txt  dimensional_table_criation.sql  mkdocs.yml  pyproject.toml  relational_table_criation.sql
.github/workflows/: deploy.yml
astro/: .gitignore  Dockerfile  packages.txt  requirements.txt
astro/.astro/: config.yaml
astro/dags/: main.py  sqlserver_to_adls_dag.py
astro/include/: bronze_layer.py
astro/tests/: test_sqlserver_connection.py
data/: create_schema_and_columns.py  create_tables.py  create_tables.sh  extract_to_adls.py  faker_data.py  generate_data.sh
data/bronze/: bronze_adls.py  bronze_blob_layer.py  bronze_config.py  bronze_layer.py  bronze_sql.py
data/gold/: gold_layer.py
data/populate_db/: create_schema_and_columns.py  create_tables.py  faker_data.py  main_setup.py
data/silver/: silver_layer.py
data/sql/: dimensional_table_criation.sql  relational_table_criation.sql
docs/: airflow.md  architecture.md  arquitetura.md  env_example.md  estrutura_projeto.md  index.md  inicio_rapido.md  instalacao.md  kpis_metricas.md  otimizacao_spark.md  pipeline_etl.md  quick_start.md  uso.md
iac/: variables.tf
site/: 404.html  index.html  sitemap.xml
site/airflow/: index.html
site/arquitetura/: index.html
site/env_example/: index.html
site/estrutura_projeto/: index.html
site/inicio_rapido/: index.html
site/instalacao/: index.html
site/kpis_metricas/: index.html
site/otimizacao_spark/: index.html
site/pipeline_etl/: index.html
site/search/: search_index.json
site/uso/: index.html
(+1 files in other folders)
