[tool.poetry]
name = "projeto-etl-spark"
version = "0.1.0"
description = "Projeto ETL com Spark"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "data" },
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
pyodbc = "^5.0.1"
pandas = "^2.1.4"
SQLAlchemy = "^2.0.23"
faker = "^22.6.0"
azure-storage-file-datalake = "^12.20.0"
pyspark = "~3.3.0"
delta-spark = "~2.3.0"
pyarrow = "^20.0.0"
azure-storage-blob = "^12.19.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"